--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,17 @@
         <script src="js/vendor/three.min.js"></script>
         <script src="js/vendor/VRRenderer.js"></script>
         <script src="js/vendor/tween.min.js"></script>
+        <script src="js/vendor/postprocessing/EffectComposer.js"></script>
+        <script src="js/vendor/postprocessing/RenderPass.js"></script>
+        <script src="js/vendor/postprocessing/BloomPass.js"></script>
+        <script src="js/vendor/postprocessing/ShaderPass.js"></script>
+        <script src="js/vendor/postprocessing/MaskPass.js"></script>
+        <script src="js/vendor/postprocessing/shaders/HorizontalTiltShiftShader.js"></script>
+        <script src="js/vendor/postprocessing/shaders/VerticalTiltShiftShader.js"></script>
+        <script src="js/vendor/postprocessing/shaders/ConvolutionShader.js"></script>
+        <script src="js/vendor/postprocessing/shaders/CopyShader.js"></script>
+
+
 
         <script src="js/vendor/OrbitControls.js"></script>
 
@@ -26,6 +37,8 @@
         <script src="js/parts/Billys.js?v=1"></script>
         <script src="js/parts/BlackFriday.js?v=1"></script>
         <script src="js/parts/ClassicDudes.js?v=1"></script>
+        <script src="js/parts/Bleed.js?v=1"></script>
+        <script src="js/FeedbackRenderTarget.js?v=1"></script>
         <script src="js/ClubKikiShaders.js?v=1"></script>
 
     </head>
